Fix image gap

--- a/src/main.css
+++ b/src/main.css
@@ -31,6 +31,7 @@ table {
   overflow-x: auto;
   height: 100%;
   width: 100%;
+  font-size: small;
 }
 
 td,
@@ -58,6 +59,7 @@ img {
 
 .nav {
   display: flex;
+  gap: 5px;
   align-items: center;
   background-color: black;
   height: var(--navHeight);
@@ -73,11 +75,11 @@ img {
   height: var(--navHeight);
   cursor: pointer;
   line-height: 35px;
-  padding: 0px 5px 0px 5px;
   background-color: transparent;
   border: 0;
-  color: inherit; 
+  color: inherit;
   text-decoration: inherit;
+  white-space: nowrap;
 }
 
 .navlink:hover,
@@ -99,9 +101,22 @@ img {
   text-align: center;
 }
 
+.identifier1stCol {
+  width: auto;
+}
+
+.identifierCol {
+  width: 10px;
+}
+
+.identifierTd {
+  height: 100%;
+}
+
 .identifierImg {
-  max-width: 100%;
-  max-height: 100%;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
   display: block;
   cursor: pointer;
 }
